--- a/web.config
+++ b/web.config
@@ -21,5 +21,6 @@
       </requestFiltering>
     </security>
     <httpErrors existingResponse="PassThrough" />
+        <directoryBrowse enabled="true" />
   </system.webServer>
 </configuration>
