--- a/.github/workflows/main_provisitapi1.yml
+++ b/.github/workflows/main_provisitapi1.yml
@@ -17,22 +17,16 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
       
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
-          name: node-app
-          path: .
-
+     
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -41,10 +35,7 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: node-app
+   
       
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
